# ChangeLog for sys-fs/squash_dir
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squash_dir-12.2 (17 Nov 2012)

  17 Nov 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Improve zsh completion support

*squash_dir-12.1 (14 Oct 2012)

  14 Oct 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Changes default of ORDER, see ChangeLog

*squash_dir-12.0 (15 Sep 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  15 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.16 (15 Sep 2012)

  15 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fix regression in wrapper script

*squash_dir-11.15 (14 Sep 2012)

  14 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Fix regression in wrapper script

*squash_dir-11.14 (12 Sep 2012)

  12 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Succeed if read-only fallback. New: STOP

*squash_dir-11.13 (06 Sep 2012)

  06 Sep 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.12 (26 Aug 2012)

  26 Aug 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Support overlayfs (untested)

*squash_dir-11.11 (29 Jul 2012)

  29 Jul 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.10 (07 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  07 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.9 (04 May 2012)

  04 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*squash_dir-11.8 (27 Apr 2012)

  27 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Check for possibly obsolete /etc/mtab.lock

*squash_dir-11.7 (08 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  08 Apr 2012; Martin Väth <martin@mvath.de>