@@ -85,8 +85,10 @@ sys-apps/lesspipe:xlhtml - Support Excel and Powerpoint files with app-arch/xlht
 sys-apps/starter:title - Support for statusline changes (requires app-shells/runtitle)
 sys-fs/aufs:all-patches - Apply all patches - also those which do not start with aufs
 sys-fs/aufs:kernel-patch - Apply the aufs kernel patches instead of just copying them
-sys-fs/squash_dir:readonly - Do not depend on any of aufs|aufs2|aufs3|unionfs|unionfs-fuse|funionfs. At least one of these must be installed and active to make the squash_dir-mounted filesystems writable.
+sys-fs/squash_dir:aufs - Prefer aufs
+sys-fs/squash_dir:overlayfs - Prefer overlayfs
 sys-fs/squash_dir:title - Support for statusline changes (requires app-shells/runtitle)
+sys-fs/squash_dir:unionfs-fuse - Prefer unionfs-fuse
 sys-fs/squashfs-tools:progress-redirect - Redirect printing of progress bar to stderr. This gives a nicer output if used from scripts like sys-fs/squash_dir
 sys-fs/squashfs-tools:xz - Enable support for XZ ("LZMA2") compression using app-arch/xz-utils
 sys-kernel/kernel:eix - Pull in eix for quicker execution
