@@ -1,1 +1,1 @@
-DIST squash_dir-12.2.tar.gz 27713 SHA256 6009ecedb0f41a36cc02614eedd41bbb39caaa1a265723b41f6228077178fee6 SHA512 57d1243f0ec06c6129f32c326877d7003df8d0eab5c6f7adf9e317aaa642d642843e0698982b06467122d1518d6a8531f3d950a23e8442a53a08c86019a9b7aa WHIRLPOOL f127cc2a4a0d2fabcc467dce50db11cc082a34ebce655298a7f4f410496d8404e32e8f354b07e7bc05d2ee5423a5ef160f620c2b562b565e2e81be8d6103d84d
+DIST squash_dir-12.3.tar.gz 28133 SHA256 7c775fcd39cee2f8f99de8777127ba6b1817103685147b6a5daa75ec39ed6e5e SHA512 ba6accca6103aad64e975161df53446c1c7ba720db17326549672cfa020d0e58fd1f3507689cfa8f1e7e42ffeafcc221a2f5b7c1e5b211ed1d0aad559e2e65ad WHIRLPOOL ed3c209bef234828cfa1444501b0592cd84ef2b66a42f4ad985a5874e0029a18f89f5d754384098d244e607a999697a9195a8f3c8eaa5d73a66ba110b6d5eb53
