@@ -14,7 +14,9 @@
 		<remote-id type="github">vaeth/squash_dir</remote-id>
 	</upstream>
 	<use>
-		<flag name="readonly">Do not depend on any of aufs|aufs2|aufs3|unionfs|unionfs-fuse|funionfs. At least one of these must be installed and active to make the squash_dir-mounted filesystems writable.</flag>
+		<flag name="aufs">Prefer aufs</flag>
+		<flag name="overlayfs">Prefer overlayfs</flag>
 		<flag name="title">Support for statusline changes (requires app-shells/runtitle)</flag>
+		<flag name="unionfs-fuse">Prefer unionfs-fuse</flag>
 	</use>
 </pkgmetadata>
