@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squash_dir-12.3 (23 Nov 2012)
+
+  23 Nov 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Provide USE for ORDER default
+
 *squash_dir-12.2 (17 Nov 2012)
 
   17 Nov 2012; Martin Väth <martin@mvath.de>
